Wed Aug  2 18:28:15 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Text objects.

Tue Aug  1 19:42:30 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Pop objects to top of layer on drag

Mon Jul 31 16:47:36 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* It works! Renders to the gtk window and everything :)

Mon Jul 31 16:47:18 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Initial import. Object hierarchy done.
