@@ -31,7 +31,14 @@ void geist_document_add_layer(geist_document * doc);
 geist_object *geist_document_find_clicked_object(geist_document * doc, int x,
 
                                                  int y);
+void geist_document_render_updates(geist_document * d);
+void geist_document_render_pmap(geist_document * doc);
+void geist_document_render_pmap_partial(geist_document * doc, int x, int y,
+
+                                        int w, int h);
 void
-geist_document_render_updates(geist_document *d);
+geist_document_render_selection(geist_document * doc);
+geist_list *geist_document_get_selected_list(geist_document * doc);
+void geist_document_unselect_all(geist_document * doc);
 
 #endif
