@@ -1,3 +1,7 @@
+Wed Aug  2 19:18:50 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
+
+	* Object selection bounding boxes.
+
 Wed Aug  2 18:28:15 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
 
 	* Text objects.
